--- a/build.gradle
+++ b/build.gradle
@@ -4,9 +4,11 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven {url "https://jitpack.io"}
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.3"
+        classpath "com.android.tools.build:gradle:4.0.0"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -18,6 +20,8 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven {url "https://jitpack.io"}
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
     }
 }
 
